--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iVeo</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header>
@@ -14,10 +14,10 @@
         <button class="menu-toggle" onclick="toggleMenu()">☰ Menu</button>
         <div class="nav-links">
             <button class="btn" onclick="location.href='../index.html'">Inicio</button>
-            <button class="btn" onclick="location.href='../estrenos.html'">Estrenos de Cine</button>
-            <button class="btn" onclick="location.href='../series.html'">Series</button>
-            <button class="btn" onclick="location.href='../peliculas.html'">Peliculas</button>
-            <button class="btn" onclick="location.href='../about.html'">Nosotros</button>
+            <button class="btn" onclick="location.href='estrenos.html'">Estrenos de Cine</button>
+            <button class="btn" onclick="location.href='series.html'">Series</button>
+            <button class="btn" onclick="location.href='peliculas.html'">Peliculas</button>
+            <button class="btn" onclick="location.href='about.html'">Nosotros</button>
         </div>
     </nav>
         <section id="about-me">
