--- a/estrenos.html
+++ b/estrenos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iVeo</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header>
@@ -14,45 +14,45 @@
         <button class="menu-toggle" onclick="toggleMenu()">☰ Menu</button>
         <div class="nav-links">
             <button class="btn" onclick="location.href='../index.html'">Inicio</button>
-            <button class="btn" onclick="location.href='../estrenos.html'">Estrenos de Cine</button>
-            <button class="btn" onclick="location.href='../series.html'">Series</button>
-            <button class="btn" onclick="location.href='../peliculas.html'">Peliculas</button>
+            <button class="btn" onclick="location.href='estrenos.html'">Estrenos de Cine</button>
+            <button class="btn" onclick="location.href='series.html'">Series</button>
+            <button class="btn" onclick="location.href='peliculas.html'">Peliculas</button>
         </div>
     </nav>
     <section id="estrenos">
         <h2 class="section-title">Estrenos de Cine</h2>        
         <!-- Tarjetas -->
         <div class="cards-container">
-            <a href="page/bad-boys.html" class="card">
-                <img src="asset/badb.png" alt="Bad Boys">
+            <a href="bad-boys.html" class="card">
+                <img src="../asset/badb.png" alt="Bad Boys">
                 <p class="heading">Bad Boys</p>
             </a>
-            <a href="page/gru.html" class="card">
-                <img src="asset/mivi.png" alt="Mi villano favorito">
+            <a href="gru.html" class="card">
+                <img src="../asset/mivi.png" alt="Mi villano favorito">
                 <p class="heading">Mi villano favorito 4</p>
             </a>
-            <a href="page/twisters.html" class="card">
-                <img src="asset/torniau.png" alt="Tornados">
+            <a href="twisters.html" class="card">
+                <img src="../asset/torniau.png" alt="Tornados">
                 <p class="heading">Twisters</p>
             </a>
-            <a href="page/inside-out.html" class="card">
-                <img src="asset/delreves.jpg" alt="Intensamente">
+            <a href="inside-out.html" class="card">
+                <img src="../asset/delreves.jpg" alt="Intensamente">
                 <p class="heading">Del revés 2</p>
             </a>
-            <a href="page/losinfa.html" class="card">
-                <img src="asset/infa.png" alt="Los Infalibles">
+            <a href="losinfa.html" class="card">
+                <img src="../asset/infa.png" alt="Los Infalibles">
                 <p class="heading">Los infalibles</p>
             </a>
-            <a href="page/hitman.html" class="card">
-                <img src="asset/hitman.png" alt="Hit Man">
+            <a href="hitman.html" class="card">
+                <img src="../asset/hitman.png" alt="Hit Man">
                 <p class="heading">Hit Man</p>
             </a>
-            <a href="page/kill.html" class="card">
-                <img src="asset/kill.png" alt="Kill Boy">
+            <a href="kill.html" class="card">
+                <img src="../asset/kill.png" alt="Kill Boy">
                 <p class="heading">Kill Boy</p>
             </a>
-            <a href="page/Vampiras.html" class="card">
-                <img src="asset/vampiras.png" alt="Vampiras: The Brides">
+            <a href="Vampiras.html" class="card">
+                <img src="../asset/vampiras.png" alt="Vampiras: The Brides">
                 <p class="heading">Vampiras: The Brides</p>
             </a>
         </div>
