--- a/series.html
+++ b/series.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iVeo</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header>
@@ -13,7 +13,7 @@
     <nav>
         <button class="menu-toggle" onclick="toggleMenu()">☰ Menu</button>
         <div class="nav-links">
-            <button class="btn" onclick="location.href='index.html'">Inicio</button>
+            <button class="btn" onclick="location.href='../index.html'">Inicio</button>
             <button class="btn" onclick="location.href='estrenos.html'">Estrenos de Cine</button>
             <button class="btn" onclick="location.href='series.html'">Series</button>
             <button class="btn" onclick="location.href='peliculas.html'">Películas</button>
@@ -24,38 +24,38 @@
         <h2 class="section-title">Series</h2>        
         <!-- Tarjetas -->
         <div class="cards-container">
-            <a href="page/fallout.html" class="card">
-                <img src="asset/falli.png" alt="Bad Boys">
+            <a href="fallout.html" class="card">
+                <img src="../asset/falli.png" alt="Bad Boys">
                 <div class="cards-content">
                 <p class="heading">Fallout</p>
                 </div>
             </a>
-            <a href="page/shogun.html" class="card">
-                <img src="asset/sho.png" alt="Shogun">
+            <a href="shogun.html" class="card">
+                <img src="../asset/sho.png" alt="Shogun">
                 <p class="heading">Shogun</p>
             </a>
-            <a href="page/leveling.html" class="card">
-                <img src="asset/Solito.png" alt="Solo Leveling">
+            <a href="leveling.html" class="card">
+                <img src="../asset/Solito.png" alt="Solo Leveling">
                 <p class="heading">Solo Leveling</p>
             </a>
-            <a href="page/acolyte.html" class="card">
-                <img src="asset/acol.png" alt="The Acolyte">
+            <a href="acolyte.html" class="card">
+                <img src="../asset/acol.png" alt="The Acolyte">
                 <p class="heading">The Acolyte</p>
             </a>
-            <a href="page/avatar.html" class="card">
-                <img src="asset/avatar.png" alt="Avatar: La leyenda de Aang">
+            <a href="avatar.html" class="card">
+                <img src="../asset/avatar.png" alt="Avatar: La leyenda de Aang">
                 <p class="heading">Avatar</p>
             </a>
-            <a href="page/gentlemen.html" class="card">
-                <img src="asset/gentelman.png" alt="The Gentlemen: La serie">
+            <a href="gentlemen.html" class="card">
+                <img src="../asset/gentelman.png" alt="The Gentlemen: La serie">
                 <p class="heading">The Gentlemen</p>
             </a>
-            <a href="page/twd.html" class="card">
-                <img src="asset/twd.png" alt="The Walking Dead: The Ones Who Live">
+            <a href="twd.html" class="card">
+                <img src="../asset/twd.png" alt="The Walking Dead: The Ones Who Live">
                 <p class="heading">The Walking Dead</p>
             </a>
-            <a href="page/ted.html" class="card">
-                <img src="asset/ted.png" alt="Ted">
+            <a href="ted.html" class="card">
+                <img src="../asset/ted.png" alt="Ted">
                 <p class="heading">TED</p>
             </a>
         </div>
