--- a/peliculas.html
+++ b/peliculas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iVeo</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header>
@@ -14,47 +14,47 @@
         <button class="menu-toggle" onclick="toggleMenu()">☰ Menu</button>
         <div class="nav-links">
             <button class="btn" onclick="location.href='../index.html'">Inicio</button>
-            <button class="btn" onclick="location.href='../estrenos.html'">Estrenos de Cine</button>
-            <button class="btn" onclick="location.href='../series.html'">Series</button>
-            <button class="btn" onclick="location.href='../peliculas.html'">Peliculas</button>
+            <button class="btn" onclick="location.href='estrenos.html'">Estrenos de Cine</button>
+            <button class="btn" onclick="location.href='series.html'">Series</button>
+            <button class="btn" onclick="location.href='peliculas.html'">Peliculas</button>
         </div>
     </nav>
     <section id="estrenos">
         <h2 class="section-title">Series</h2>        
         <!-- Tarjetas -->
         <div class="cards-container">
-            <a href="page/kungfu.html" class="card">
-                <img src="asset/kun.png" alt="Kung Fu Panda 4">
+            <a href="kungfu.html" class="card">
+                <img src="../asset/kun.png" alt="Kung Fu Panda 4">
                 <div class="cards-content">
                 <p class="heading">Kung Fu Panda 4</p>
                 </div>
             </a>
-            <a href="page/dune.html" class="card">
-                <img src="asset/dune2.png" alt="Dune 2">
+            <a href="dune.html" class="card">
+                <img src="../asset/dune2.png" alt="Dune 2">
                 <p class="heading">Dune 2</p>
             </a>
-            <a href="page/godzilla.html" class="card">
-                <img src="asset/Godzilla.png" alt="Godzilla y Kong: El nuevo imperio">
+            <a href="godzilla.html" class="card">
+                <img src="../asset/Godzilla.png" alt="Godzilla y Kong: El nuevo imperio">
                 <p class="heading">Godzilla y Kong</p>
             </a>
-            <a href="page/mad.html" class="card">
-                <img src="asset/mad.png" alt="Furiosa: De la saga Mad Max">
+            <a href="mad.html" class="card">
+                <img src="../asset/mad.png" alt="Furiosa: De la saga Mad Max">
                 <p class="heading">Furiosa: Mad Max</p>
             </a>
-            <a href="page/elplaneta.html" class="card">
-                <img src="asset/simios.png" alt="El reino del planeta de los simios">
+            <a href="elplaneta.html" class="card">
+                <img src="../asset/simios.png" alt="El reino del planeta de los simios">
                 <p class="heading">El reino de los simios</p>
             </a>
-            <a href="page/madame.html" class="card">
-                <img src="asset/madam.png" alt="Madame Web">
+            <a href="madame.html" class="card">
+                <img src="../asset/madam.png" alt="Madame Web">
                 <p class="heading">Madame Web</p>
             </a>
-            <a href="page/cazafantasmas.html" class="card">
-                <img src="asset/caza.png" alt="Cazafantasmas: Imperio helado">
+            <a href="cazafantasmas.html" class="card">
+                <img src="../asset/caza.png" alt="Cazafantasmas: Imperio helado">
                 <p class="heading">Cazafantasmas: Imperio helado</p>
             </a>
-            <a href="page/roadhouse.html" class="card">
-                <img src="asset/duro.png" alt="Road House (De profesión: duro)">
+            <a href="roadhouse.html" class="card">
+                <img src="../asset/duro.png" alt="Road House (De profesión: duro)">
                 <p class="heading">De profesión: duro</p>
             </a>
         </div>
