--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <button class="menu-toggle" onclick="toggleMenu()">☰ Menu</button>
         <div class="nav-links">
             <button class="btn" onclick="location.href='index.html'">Inicio</button>
-            <button class="btn" onclick="location.href='estrenos.html'">Estrenos de Cine</button>
-            <button class="btn" onclick="location.href='series.html'">Series</button>
-            <button class="btn" onclick="location.href='peliculas.html'">Películas</button>
-            <button class="btn" onclick="location.href='about.html'">Nosotros</button>
+            <button class="btn" onclick="location.href='page/estrenos.html'">Estrenos de Cine</button>
+            <button class="btn" onclick="location.href='page/series.html'">Series</button>
+            <button class="btn" onclick="location.href='page/peliculas.html'">Películas</button>
+            <button class="btn" onclick="location.href='page/about.html'">Nosotros</button>
         </div>
     </nav>
     <main>
